# khonliang-researcher

./: .gitignore  .mcp.example.json  .mcp.json  CLAUDE.md  FEATURE_REQUESTS.md  KHONLIANG_FEEDBACK.md  README.md  config.example.yaml  config.yaml  feeds.opml  pyproject.toml  sources.json
.reviewer/examples/code_review/: enum_to_value_coercion.md  nanosecond_resolution_ids.md  non_dict_bus_payload_guard.md  paper_vs_idea_filter.md  shutdown_preserves_persistence.md  snapshot_id_race_prevention.md
docs/: repo-hygiene-audit.md
prompts/: assessor.md  extractor.md  idea_parser.md  summarizer.md  synergize.md
researcher/: __init__.py  __main__.py  agent.py  cli.py  fetcher.py  generic_agent.py  graph.py  idea.py  ingest_jobs.py  ingest_watcher.py  librarian_agent.py  parser.py  pipeline.py  queue.py  relevance.py  roles.py  rss.py  search_engines.py  server.py  synthesizer.py  util.py  worker.py
tests/: test_agent_ingest_async.py  test_brief_on.py  test_fetcher.py  test_ingest_jobs.py  test_ingest_watcher.py  test_librarian_agent.py  test_pipeline_ingest_github_progress.py  test_pipeline_librarian_support.py  test_pipeline_shortlinks.py  test_store_integration.py  test_summary_render.py  test_util.py  test_welcome.py
