[project]
name = "khonliang-researcher"
version = "0.3.0"
description = "Research paper ingestion and distillation pipeline powered by khonliang"
requires-python = ">=3.11"
dependencies = [
    "ollama-khonliang @ git+https://github.com/tolldog/ollama-khonliang.git@main",
    "khonliang-researcher-lib @ git+https://github.com/tolldog/khonliang-researcher-lib.git@1a1421e8b355fa061395ab6bac111b86d805b4ae",
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "click>=8.0",
    "pyyaml>=6.0",
    "pymupdf>=1.24",
    "markdownify>=0.12",
    "mcp>=1.0.0",
    "khonliang-bus-lib>=0.5.0",  # >=0.5.0 for Welcome / WelcomeEntryPoint exports
]

[project.scripts]
khonliang-researcher = "researcher.cli:main"

[tool.setuptools.packages.find]
include = ["researcher*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
